--- a/css/projectCommon.css
+++ b/css/projectCommon.css
@@ -1,5 +1,5 @@
 body {
-    background: url(/bg1.jpg) no-repeat center;
+    background: url(../img/bg1.jpg) no-repeat center;
     background-size: cover;
   }
   
@@ -18,11 +18,12 @@ body {
     margin-top:50px;
     position: relative;
   }
+  
   .photoBox {
     width: 1000px;  
     height: 500px;
   }
-  
+
   .Images{
     width: 100%;
     height: 480px;
@@ -118,4 +119,8 @@ body {
   .header{
     display: flex;
     justify-content: flex-end;
+  }
+
+  .link {
+    color:rgb(83, 255, 138);
   }
