--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,11 @@
- body {
+@font-face {
+    font-family: 'Ycomputer-Regular';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_11-01@1.0/Ycomputer-Regular.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+}
+body {
+    font-family: 'Ycomputer-Regular';
     background: url(/img/bg1.jpg) no-repeat center;
     background-size: cover;
 } 
@@ -77,6 +84,7 @@
     margin: 5px;
     height: 180px;
     padding: 5px;
+    margin-top:10px;
 }
 
 .skill_icon {
@@ -164,33 +172,4 @@
 
 .fadeOut {
     opacity: 0;
-}
-
-
-
-/* button click */
-
-.animate_content {
-    animation: animate 3s ease;
-}
-
-@keyframes animate {
-
-	10% 
-		 {transform: scale(1, 0.002);}
-	35%
-		{transform: scale(0.2, 0.002)
-		opacity 1;}
-	50%
-		{transform: scale(0.2, 0.002)
-		opacity 0;}
-	85%
-		{transform: scale(1, 0.002)
-		opacity 1;}
-	100%
-		{transform: scale(1, 1);}
-}
-
-.fadeIn {
-    z-index: 10;
 }
