--- a/css/projectCommon.css
+++ b/css/projectCommon.css
@@ -1,8 +1,15 @@
+@font-face {
+  font-family: 'Ycomputer-Regular';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_11-01@1.0/Ycomputer-Regular.woff2') format('woff2');
+  font-weight: normal;
+  font-style: normal;
+}
+
 body {
     background: url(../img/bg1.jpg) no-repeat center;
     background-size: cover;
-  }
-  
+    font-family: 'Ycomputer-Regular';
+}
   .container-outer {
     display: flex;
     flex-direction: column;
@@ -38,7 +45,7 @@ body {
   .next {
     cursor: pointer;
     position: absolute;
-    top: 35%;
+    top: 28%;
     padding: 16px;
     margin-top: -50px;
     color: rgb(83, 255, 138);
@@ -124,3 +131,13 @@ body {
   .link {
     color:rgb(83, 255, 138);
   }
+
+  .write  {
+    padding:5px 0px 5px 30px;
+}
+
+li {
+  font-weight: bold;
+  font-size: 23px;
+  padding: 10px;
+}
