--- a/css/about.css
+++ b/css/about.css
@@ -1,7 +1,13 @@
+@font-face {
+  font-family: 'Ycomputer-Regular';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_11-01@1.0/Ycomputer-Regular.woff2') format('woff2');
+  font-weight: normal;
+  font-style: normal;
+}
 body {
     background: url(/img/bg1.jpg) no-repeat center;
     background-size: cover;
-    color:white;
+    font-family: 'Ycomputer-Regular';
 }   
 .header{
     display: flex;
@@ -49,5 +55,15 @@ body {
 
   .title {
     padding:10px;
-    font-size: 22px;
+    font-size: 30px;
+    color:white;
   }
+
+  .write{
+    font-size: 20px;
+    color:white;
+    padding:10px;
+  }
+
+
+
