--- a/css/about.css
+++ b/css/about.css
@@ -37,7 +37,7 @@ body {
     border: 1px solid rgb(83, 255, 138);
     padding:20px;
     width:1000px;
-    height: 750px;
+    height: 500px;
     margin-top:50px;
   }
 
@@ -57,13 +57,15 @@ body {
     padding:10px;
     font-size: 30px;
     color:white;
+    margin-top: 20px;
   }
 
   .write{
-    font-size: 20px;
+    font-size: 22px;
     color:white;
     padding:10px;
+    margin-top: 20px;
   }
-
-
-
+.pha1{
+  font-size: 25px;
+}
