--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,7 @@
 }
 body {
     font-family: 'Ycomputer-Regular';
-    background: url(/img/bg1.jpg) no-repeat center;
+    background: url(../img/bg1.jpg) no-repeat center;
     background-size: cover;
 } 
 
