--- a/css/main.css
+++ b/css/main.css
@@ -161,3 +161,13 @@ body {
 .fadeOut {
     opacity: 0;
 }
+
+a {
+    text-decoration: none;
+    color:#555656;
+}
+
+a:hover {
+    text-decoration: none;
+    color: #262727;
+}
