--- a/css/main.css
+++ b/css/main.css
@@ -189,39 +189,43 @@ a:hover {
     .whole {
         height: auto;
         width: auto;
-        margin:10px;
+        margin:20px;
         flex-direction: column;
         padding:0;
     }
     .col-4, .col-8 {
         max-width: none;
     }
+    #myphoto {
+        width: 100%;
+        height: auto;
+    }
     .box1 {
         margin-top: 20px;
-        width: 70%;
+        width: 100%;
         order: 0;
       }
       .box2 {
-        width: 70%;
+        width: 100%;
         flex: 1 20%;
         order: 1;
       }
       .box2-1 {
-        width: 70%;
+        width: 100%;
         flex: 1 20%;
         order: 2;
       }
       .box3 {
-        width: 70%;
+        width: 100%;
         order:3;
       }
       .box4 {
-        width: 70%;
+        width: 100%;
         flex: 1 100%;
         order: 4;
       }
       .box5 {
-        width: 70%;
+        width: 100%;
         order: 5;
         flex: 1 100%;
         margin-bottom: 30px;
