--- a/css/main.css
+++ b/css/main.css
@@ -20,7 +20,7 @@ body {
 } 
 
 .whole{
-    width: 60%;
+    width: 1000px;
 	height: 750px;
     display: flex;
     align-items: center;
@@ -233,25 +233,73 @@ a:hover {
 
 }
 
-    /* 모바일 가로모드일대 */
-    @media screen and ( max-width: 767px ) 
-                  and ( orientation: landscape )
-
-                  {
-
-    }
-
     /* 태블릿 해상도 */
     @media screen and (min-width: 768px)
                   and (max-width: 959px)
         {
-            
+            .whole {
+                height: auto;
+                width: auto;
+                margin:20px;
+            }
+            .box1 {
+                width: 100%;
+              }
+            #myphoto {
+                width: 100%;
+                height: auto;
+            }
+            .box2 {
+                width: 100%;
+              }
+              .box2-1 {
+                width: 100%;
+              }
+              .box3 {
+                width: 100%;
+                height: auto;
+              }
+              .box4 {
+                width: 100%;
+              }
+              .box5 {
+                width: 100%;
+                height: 630px;
+            }
+
+            @media screen and (min-width: 960px)
+            {
+                .whole {
+                    width: 100%;
+                }
+                .box1 {
+                    width: 100%;
+                  }
+                #myphoto {
+                    width: 100%;
+                    height: auto;
+                }
+                .box2 {
+                    width: 100%;
+                  }
+                  .box2-1 {
+                    width: 100%;
+                  }
+                  .box3 {
+                    width: 100%;
+                    height: auto;
+                  }
+                  .box4 {
+                    width: 100%;
+                  }
+                  .box5 {
+                    width: 100%;
+                    height: 630px;
+                }
+            }
+     
+        
         }
 
-    /* pc해상도  */
-    @media screen and (min-width: 960px)
-       {
-
-       }
 
     
