--- a/css/projectCommon.css
+++ b/css/projectCommon.css
@@ -9,6 +9,9 @@ body {
     background: url(../img/bg1.jpg) no-repeat center;
     background-size: cover;
     font-family: 'Ycomputer-Regular';
+    min-height: 100%;
+    background-position: center;
+    background-size: cover;
 }
   .container-outer {
     display: flex;
@@ -144,3 +147,100 @@ li {
   font-size: 23px;
   padding: 10px;
 }
+
+    /* 모바일 해상도 */
+    @media screen and ( max-width: 767px ) 
+                  and ( orientation: portrait )
+{
+    .whole {
+        height: auto;
+        width: auto;
+        margin:20px;
+        flex-direction: column;
+        padding:0;
+    }
+    .col-4, .col-8 {
+        max-width: none;
+    }
+    #myphoto {
+        width: 100%;
+        height: auto;
+    }
+    .box1 {
+        margin-top: 20px;
+        width: 100%;
+        order: 0;
+      }
+      .box2 {
+        width: 100%;
+        flex: 1 20%;
+        order: 1;
+      }
+      .box2-1 {
+        width: 100%;
+        flex: 1 20%;
+        order: 2;
+      }
+      .box3 {
+        width: 100%;
+        order:3;
+      }
+      .box4 {
+        width: 100%;
+        flex: 1 100%;
+        order: 4;
+      }
+      .box5 {
+        width: 100%;
+        order: 5;
+        flex: 1 100%;
+        margin-bottom: 30px;
+      }
+
+}
+
+    /* 태블릿 해상도 */
+    @media screen and (min-width: 768px)
+                  and (max-width: 959px)
+        {
+            .whole {
+                height: auto;
+                width: auto;
+                margin:20px;
+            }
+            .box1 {
+                width: 100%;
+              }
+            #myphoto {
+                width: 100%;
+                height: auto;
+
+            }.box2 {
+                width: 100%;
+                flex: 1;
+
+              }
+              .box2-1 {
+                width: 100%;
+                flex: 1;
+
+              }
+              .box3 {
+                width: 100%;
+                flex: 1;
+              }
+              .box4 {
+                width: 100%;
+                flex: 1;
+
+              }
+              .box5 {
+                width: 100%;
+                height: auto;
+                flex:1;
+            }
+        
+        }
+
+
+    
