--- a/css/projectCommon.css
+++ b/css/projectCommon.css
@@ -147,7 +147,9 @@ li {
 }
 
     /* 모바일 해상도 */
+
     @media screen and ( max-width: 767px ) 
+                  and ( min-width:320px )
                   and ( orientation: portrait )
 {
 
